--- a/profile.html
+++ b/profile.html
@@ -80,9 +80,10 @@
 	<br>
 	<br>
 
-  <div class=" px-40">
+  <div class=" x-40">
   <div>
-    <div class="mx-auto grid max-w-2xl items-center gap-x-8 gap-y-16 px-4 py-24 sm:px-6 sm:py-32 lg:max-w-7xl lg:grid-cols-2 lg:px-8">
+    <h1 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-5xl px-36">Your Profile</h1>
+    <div class="mx-auto grid max-w-2xl items-center gap-x-8 gap-y-16 px-4 py-24 sm:px-6 sm:pb-32 sm:pt-0 lg:max-w-7xl lg:grid-cols-2 lg:px-8">
       <div>
         <img src="images/profile/profilepic.jpg" class="w-44 h-44 rounded-full" alt="Bobby's Profile Picture">
         <h2 id="userID" class="pt-8 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">${userName}</h2>
@@ -184,7 +185,7 @@
         3 Tutorial Achiever!
       </h2>
       <h1 class="text-center pt-3 pb-10">
-        Completes 3 Tutorials
+        Complete 3 Tutorials
       </h1>
       <img class="w-30 h-50" src="images/badge_icon/yes_5_2.png" alt="Badge">
       <button onclick="closeModal()" type="button" class="bg-indigo-600 shadow-xl hover:bg-indigo-500 text-white 
@@ -198,9 +199,9 @@
           5 Tutorial Achiever!
         </h2>
         <h1 class="text-center pt-3 pb-10">
-          Completes 5 Tutorials
+          Complete 5 Tutorials
         </h1>
-        <img class="w-30 h-50" src="images/badge_icon/yes_5_2.png" alt="Badge">
+        <img class="w-30 h-50" src="images/badge_icon/yes_5_3.png" alt="Badge">
         <button onclick="closeModal2()" type="button" class="bg-indigo-600 shadow-xl hover:bg-indigo-500 text-white 
         rounded-lg p-4 text-center p-30">Close</button>
       </div>
@@ -209,12 +210,12 @@
       <div class="modal-container3">
         <div id="myModal3" class="modal rounded-lg border-2 ring-indigo-500">
           <h2 class="text-center text-3xl font-bold pt-10">
-            5 Tutorial Achiever!
+            10 Tutorial Achiever!
           </h2>
           <h1 class="text-center pt-3 pb-10">
-            Completes 5 Tutorials
+            Complete 10 Tutorials
           </h1>
-          <img class="w-30 h-50" src="images/badge_icon/yes_5_2.png" alt="Badge">
+          <img class="w-30 h-50" src="images/badge_icon//icon6.png" alt="Badge">
           <button onclick="closeModal3()" type="button" class="bg-indigo-600 shadow-xl hover:bg-indigo-500 text-white 
           rounded-lg p-4 text-center p-30">Close</button>
         </div>
@@ -223,12 +224,12 @@
         <div class="modal-container4">
           <div id="myModal4" class="modal rounded-lg border-2 ring-indigo-500">
             <h2 class="text-center text-3xl font-bold pt-10">
-              5 Tutorial Achiever!
+              Mission Conqueror
             </h2>
             <h1 class="text-center pt-3 pb-10">
-              Completes 5 Tutorials
+              Completed daily mission consecutively for a week
             </h1>
-            <img class="w-30 h-50" src="images/badge_icon/yes_5_2.png" alt="Badge">
+            <img class="w-30 h-50" src="images/badge_icon/icon5.png" alt="Badge">
             <button onclick="closeModal4()" type="button" class="bg-indigo-600 shadow-xl hover:bg-indigo-500 text-white 
             rounded-lg p-4 text-center p-30">Close</button>
           </div>
@@ -237,12 +238,12 @@
           <div class="modal-container5">
             <div id="myModal5" class="modal rounded-lg border-2 ring-indigo-500">
               <h2 class="text-center text-3xl font-bold pt-10">
-                5 Tutorial Achiever!
+                Golden Trophy
               </h2>
               <h1 class="text-center pt-3 pb-10">
-                Completes 5 Tutorials
+                Leave a review for 5 tutorials
               </h1>
-              <img class="w-30 h-50" src="images/badge_icon/yes_5_2.png" alt="Badge">
+              <img class="w-30 h-50" src="images/badge_icon/icon2.png" alt="Badge">
               <button onclick="closeModal5()" type="button" class="bg-indigo-600 shadow-xl hover:bg-indigo-500 text-white 
               rounded-lg p-4 text-center p-30">Close</button>
             </div>
@@ -251,12 +252,12 @@
             <div class="modal-container6">
               <div id="myModal6" class="modal rounded-lg border-2 ring-indigo-500">
                 <h2 class="text-center text-3xl font-bold pt-10">
-                  5 Tutorial Achiever!
+                  Thumbs Up!
                 </h2>
                 <h1 class="text-center pt-3 pb-10">
-                  Completes 5 Tutorials
+                  Like your friends’ post 10x
                 </h1>
-                <img class="w-30 h-50" src="images/badge_icon/yes_5_2.png" alt="Badge">
+                <img class="w-30 h-50" src="images/badge_icon/icon3.png" alt="Badge">
                 <button onclick="closeModal6()" type="button" class="bg-indigo-600 shadow-xl hover:bg-indigo-500 text-white 
                 rounded-lg p-4 text-center p-30">Close</button>
               </div>
