--- a/lotus_stepbystep_3.html
+++ b/lotus_stepbystep_3.html
@@ -155,7 +155,7 @@
       <div class="card">
         <img src="images/lotus tutorial/11.jpg" class="card-img-top" alt="Lotus Folding">
         <div class="card-body text-center" id="h5text">
-          <h5 class="card-title">Rotate the paper.<br></h5>
+          <h5 class="card-title"><br>Rotate the paper.<br></h5>
         </div>
       </div>
       <div class="card">
