--- a/lotus_stepbystep_5.html
+++ b/lotus_stepbystep_5.html
@@ -149,13 +149,13 @@
       <div class="card">
         <img src="images/lotus tutorial/16.jpg" class="card-img-top" alt="Lotus Folding">
         <div class="card-body" id="h5text">
-          <h5 class="card-title text-center">Fold the other three points to the center.</h5>
+          <h5 class="card-title text-center"><br><br>Fold the other three points to the center.</h5>
         </div>
       </div>
       <div class="card">
         <img src="images/lotus tutorial/17.jpg" class="card-img-top" alt="Lotus Folding">
         <div class="card-body text-center" id="h5text">
-          <h5 class="card-title">Fold one of the corners in a little.<br></h5>
+          <h5 class="card-title"><br><br>Fold one of the corners in a little.<br><br></h5>
         </div>
       </div>
       <div class="card">
