--- a/lotus_stepbystep_6.html
+++ b/lotus_stepbystep_6.html
@@ -149,13 +149,13 @@
       <div class="card">
         <img src="images/lotus tutorial/19.jpg" class="card-img-top" alt="Lotus Folding">
         <div class="card-body" id="h5text">
-          <h5 class="card-title text-center">Fold the other three corners in the same way.</h5>
+          <h5 class="card-title text-center"><br>Fold the other three corners in the same way.</h5>
         </div>
       </div>
       <div class="card">
         <img src="images/lotus tutorial/20.jpg" class="card-img-top" alt="Lotus Folding">
         <div class="card-body text-center" id="h5text">
-          <h5 class="card-title">Fold the little inner flaps up inside the flower.<br></h5>
+          <h5 class="card-title"><br>Fold the little inner flaps up inside the flower.<br></h5>
         </div>
       </div>
       <div class="card">
