--- a/lotus_stepbystep_7.html
+++ b/lotus_stepbystep_7.html
@@ -154,13 +154,13 @@
       <div class="card">
         <img src="images/lotus tutorial/23.jpg" class="card-img-top" alt="Lotus Folding">
         <div class="card-body text-center" id="h5text">
-          <h5 class="card-title">Optionally fold the last set of flaps from the back of the lotus.<br></h5>
+          <h5 class="card-title"><br>Optionally fold the last set of flaps from the back of the lotus.<br></h5>
         </div>
       </div>
       <div class="card">
         <img src="images/lotus tutorial/24.jpg" class="card-img-top" alt="Lotus Folding">
         <div class="card-body text-center" id="h5text">
-          <h5 class="card-title">The finished origami lotus flower.</h5>
+          <h5 class="card-title"><br><br>The finished origami lotus flower.<br></h5>
         </div>
       </div>
     </div>
