--- a/contact.html
+++ b/contact.html
@@ -138,7 +138,7 @@
 <br>
 
 <div class="faq-container pb-20">
-	<h1 class="text-indigo-700">FAQ</h1>
+	<h1 class="text-indigo-700"><b>FAQ</b></h1>
 	<br>
 	<details>
 		<summary class="text-indigo-700">I am having issues with my account</summary>
