Image folders and touch up

--- a/about.html
+++ b/about.html
@@ -116,7 +116,7 @@
     </p>
   </div>
   <div class="goalsimg">
-    <img src="images/goals.jpg" alt="Hand holding Origami">
+    <img src="images/aboutpage/goals.jpg" alt="Hand holding Origami">
   </div>
   
    </div>
@@ -124,7 +124,7 @@
 
    <div class="aboutvision">
   <div class="visionimg">
-   <img src="images/vision.jpg" alt="Children Making Origami">
+   <img src="images/aboutpage/vision.jpg" alt="Children Making Origami">
     </div>
     
 
@@ -168,7 +168,7 @@
     </div>
 
     <div class="malcimg">
-      <img src="images/malcom.jpg" alt="Malcom">
+      <img src="images/aboutpage/malcom.jpg" alt="Malcom">
     </div>
     
       </div>
@@ -176,7 +176,7 @@
   
       <div class="aboutyeji">
     <div class="yejiimg">
-      <img src="images/yeji.jpg" alt="Yeji">
+      <img src="images/aboutpage/yeji.jpg" alt="Yeji">
       </div>
   
     <!--Same text features-->
