--- a/registration.html
+++ b/registration.html
@@ -83,7 +83,7 @@
 
   <div class="container">
     <div class="image-container">
-      <img src="images/register.jpg" alt="Register Image">
+      <img src="images/Pages/register.jpg" alt="Register Image">
     </div>
     <div class="form-container">
       <div class="card">
