--- a/about.html
+++ b/about.html
@@ -162,7 +162,7 @@
       <h2>Malcom Goh</h2>
       <h3>Project Leader</h3>
       <p>
-      Hey, I am Malcom. I am the Project Leader of origaME!. I'm an independent and self-motivated individual with new ideas to bring, able to adapt to new challenges
+      Hey, I am Malcom. I am the Project Leader of OrigaME!. I'm an independent and self-motivated individual with new ideas to bring, able to adapt to new challenges
       and tends to carry out tasks to the best of my own abilities!
       </p>
     </div>
@@ -184,8 +184,8 @@
       <h2>Sung Yeji</h2>
     <h3>Founder</h3>
       <p>
-      Hey! I am Yeji. I'm the Founder of origaMe! and also an avid designer with a passion for programming and a heart for volunteering. 
-      Connect with me to leave a mark of positive change in the world, with one pixel and a line of code at a time!
+      Hey! I am Yeji. I'm the Founder of OrigaMe! and also an avid designer with a passion for programming and a heart for volunteering. I hope OrigaME! enables everybody
+      to have fun together!
       </p>
     </div>
     
