--- a/loading.html
+++ b/loading.html
@@ -20,6 +20,8 @@
     </style>
 </head>
 <body>
+
+    <!--Lottie Animation-->
     <div class="animation-center">
         <div>
             <div class="animation">
