--- a/profile.html
+++ b/profile.html
@@ -80,6 +80,8 @@
 	<br>
 	<br>
 
+
+  <!--Profile Display-->
   <div class=" x-40">
   <div>
     <h1 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-5xl px-36">Your Profile</h1>
@@ -111,6 +113,7 @@
         <br>
       </div>
     
+      <!--Badges Display-->
       <section class="badges">
         <h2 id="heading" class="text-4xl font-bold mb-4">Badges</h2>
         <div class="flex-container">
@@ -150,6 +153,7 @@
       </section>
       
 
+      <!--Gallery of Origami display-->
     <div class="header-container">
       <h2>Origami Gallery</h2>
     </div>
@@ -179,6 +183,8 @@
 
   </div>
 
+
+  <!--Modals-->
   <div class="modal-container">
     <div id="myModal" class="modal rounded-lg border-2 ring-indigo-500">
       <h2 class="text-center text-3xl font-bold pt-10">
