--- a/registration.html
+++ b/registration.html
@@ -81,6 +81,7 @@
   <br>
   <br>
 
+  <!--Registration Card-->
   <div class="container">
     <div class="image-container">
       <img src="images/Pages/register.jpg" alt="Register Image">
@@ -126,6 +127,7 @@
     </div>
   </div>
 
+  <!--Footer-->
 <footer class="bg-indigo-900 dark:bg-gray-900">
   <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
       <div class="md:flex md:justify-between">
